# LAGraph

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  2  744_benchmark  800_3_benchmark  800_compact  Acknowledgments.txt  BENCHMARK_INSTRUCTIONS__README1st.txt  CMakeLists.txt  ChangeLog  ContributionInstructions.txt  Contributors.txt  Dockerfile  LICENSE  Makefile  Makefile_master  README.md  TODO.txt  header_comment.txt  index-sort-f.html  index-sort-l.html  index.html  instructions.txt  m1_mac_lcc_output.txt  notes.c  o1  out.txt  output_test_SampleDegree.txt  pp_out.mtx  test.txt
Test2/BFS/: CMakeLists.txt  Makefile  do_gap  doi  o_gap_7Jan2020.txt  test_bfs.c
experimental/: CMakeLists.txt  README.txt
experimental/Algorithm/: LAGraph_bfs_both.c  LAGraph_bfs_parent.c  LAGraph_bfs_pushpull.c  LAGraph_cdlp.c  LAGraph_dnn.c  LAGraph_matrix_extract_keep_dimensions.c  LAGraph_scc.c  LAGraph_sssp12.c
experimental/Utility/: LAGraph_tsvread.c
experimental/algorithm/: LAGr_MarkovClustering.c  LAGr_Modularity.c  LAGr_PageRankGX.c  LAGr_PartitionQuality.c  LAGr_PeerPressureClustering.c  LAGr_SquareClustering.c  LAGr_TriangleCount_GPU.c  LAGraph_AllKCore.c  LAGraph_AllKCore.c.func-sort-c.html  LAGraph_AllKCore.c.func.html  LAGraph_AllKCore.c.gcov.html  LAGraph_AllKTruss.c  LAGraph_AllKTruss.c.func-sort-c.html  LAGraph_AllKTruss.c.func.html  LAGraph_AllKTruss.c.gcov.html  LAGraph_BF_basic.c  LAGraph_BF_basic.c.func-sort-c.html  LAGraph_BF_basic.c.func.html  LAGraph_BF_basic.c.gcov.html  LAGraph_BF_basic_mxv.c  LAGraph_BF_basic_mxv.c.func-sort-c.html  LAGraph_BF_basic_mxv.c.func.html  LAGraph_BF_basic_mxv.c.gcov.html  LAGraph_BF_basic_pushpull.c  LAGraph_BF_basic_pushpull.c.func-sort-c.html  LAGraph_BF_basic_pushpull.c.func.html  LAGraph_BF_basic_pushpull.c.gcov.html  LAGraph_BF_full.c  LAGraph_BF_full.c.func-sort-c.html  LAGraph_BF_full.c.func.html  LAGraph_BF_full.c.gcov.html  LAGraph_BF_full1.c  LAGraph_BF_full1.c.func-sort-c.html  LAGraph_BF_full1.c.func.html  LAGraph_BF_full1.c.gcov.html  LAGraph_BF_full1a.c  LAGraph_BF_full1a.c.func-sort-c.html  LAGraph_BF_full1a.c.func.html  LAGraph_BF_full1a.c.gcov.html  LAGraph_BF_full2.c  (+101 more)
experimental/benchmark/: AllKCore_demo.c  CMakeLists.txt  KCore_demo.c  VertexCover_demo.c  argmax_tests.m  cdlp_demo.c  cdlp_nosort_demo.c  cdlp_withsort_demo.c  coarsen_matching_demo.c  dnn_demo.c  do_gap_tcc  do_hpec21_tcc  do_idx  do_mis  do_tcc_binary  estimateDiameter_demo.c  exactDiameter_demo.c  fglt_demo.c  hdip_fiedler_demo.c  helloworld2_demo.c  helloworld_demo.c  hits_demo.c  idx_demo.c  lcc_demo.c  matching_demo.c  mcl_demo.c  mcm_demo.c  mis_demo.c  multisourcebfs_demo.c  o_mis_burble  o_mis_pushpull6  o_mis_pushpull_int64  o_mis_pushpull_seed  o_mis_pushpull_seed2  o_mis_pushpull_seed3  o_mis_pushpull_seed4  o_tcc_1  o_tcc_1.txt  o_tcc_15g  o_tcc_1d  (+18 more)
experimental/include/: LAGraph.h
experimental/test/: BF_test.c  BF_test.h  CC_test.c  CMakeLists.txt  FW1_test.c  FW2_test.c  GAP_19July2020.txt  GAP_2020.txt  GAP_Summary.txt  LCC_test.c  LG_check_coarsen.c  LG_check_kcore.c  LG_check_kcore.c.func-sort-c.html  LG_check_kcore.c.func.html  LG_check_kcore.c.gcov.html  LG_check_kcoredecompose.c  LG_check_kcoredecompose.c.func-sort-c.html  LG_check_kcoredecompose.c.func.html  LG_check_kcoredecompose.c.gcov.html  LG_check_ktruss.c  LG_check_ktruss.c.func-sort-c.html  LG_check_ktruss.c.func.html  LG_check_ktruss.c.gcov.html  LG_check_lcc.c  LG_check_mis.c  LG_check_mis.c.func-sort-c.html  LG_check_mis.c.func.html  LG_check_mis.c.gcov.html  Makefile.test.CC  Makefile.test.FW  Makefile.test.LCC  Makefile.test.allktruss  Makefile.test.cdlp  Makefile.test.dense_relabel  Makefile.test.ktruss  allktruss_test.c  cdlp_test.c  dense_relabel_test.c  dnn_test.c  do_gap_all  (+110 more)
experimental/utility/: GB_msort_2.c  GB_msort_2.h  LAGraph_1_to_n.c  LAGraph_A_to_E.c  LAGraph_BinRead.c  LAGraph_Incidence_Matrix.c  LAGraph_Parent_to_S.c  LAGraph_Random.c  LAGraph_Random.c.func-sort-c.html  LAGraph_Random.c.func.html  LAGraph_Random.c.gcov.html  LAGraph_Random_Matrix.c  LAGraph_Random_Matrix.c.func-sort-c.html  LAGraph_Random_Matrix.c.func.html  LAGraph_Random_Matrix.c.gcov.html  LAGraph_SFreeContents.c  LAGraph_SFreeContents.c.func-sort-c.html  LAGraph_SFreeContents.c.func.html  LAGraph_SFreeContents.c.gcov.html  LAGraph_SFreeSet.c  LAGraph_SFreeSet.c.func-sort-c.html  LAGraph_SFreeSet.c.func.html  LAGraph_SFreeSet.c.gcov.html  LAGraph_SLoadSet.c  LAGraph_SLoadSet.c.func-sort-c.html  LAGraph_SLoadSet.c.func.html  LAGraph_SLoadSet.c.gcov.html  LAGraph_SRead.c  LAGraph_SRead.c.func-sort-c.html  LAGraph_SRead.c.func.html  LAGraph_SRead.c.gcov.html  LAGraph_SSaveSet.c  LAGraph_SSaveSet.c.func-sort-c.html  LAGraph_SSaveSet.c.func.html  LAGraph_SSaveSet.c.gcov.html  LAGraph_SWrite.c  LAGraph_SWrite.c.func-sort-c.html  LAGraph_SWrite.c.func.html  LAGraph_SWrite.c.gcov.html  LAGraph_Vector_IsEqual.c  (+23 more)
mine/: CMakeLists.txt  test.c  test_cpp.cpp
src/benchmark/: 743_benchmark  CMakeLists.txt  Dec26.txt  FW_cam_demo.c  GAP_2021.txt  GAP_2022.txt  GAP_2023.txt  GAP_2024.txt  LAGraph_demo.h  LAGraph_demo_GPU.h  README.md  bc_demo.c  bc_simple_demo.c  bfs_demo.c  cam_VC_demo.c  cam_bfs_demo.c  cc_demo.c  do_cc  do_cc_Nov23_2021.txt  do_gap_2  do_gap_all  do_gap_bc  do_gap_bfs  do_gap_binary  do_gap_cc  do_gap_pagerank  do_gap_sssp  do_gap_tc  do_gap_tcc  do_hpec21_pr  do_hpec21_tcc  do_ss2  do_ss3  gappagerank_demo.c  mtx2bin_demo.c  o_Nov15a.txt  o_Nov15b.txt  o_Nov30.txt  o_cc1  o_cc_24Nov2021.txt  (+43 more)
src/demo/: CMakeLists.txt  LAGraph_Test.h  LAGraph_demo.h  README.md  bc_demo.c  bfs_demo.c  cc_demo.c  do_gap_all  do_gap_bc  do_gap_bfs  do_gap_binary  do_gap_cc  do_gap_pagerank  do_gap_sssp  do_gap_tc  gappagerank_demo.c  mtx2bin_demo.c  o_gap_14May2021.txt  o_gap_14May2021_backslash.txt  sssp_demo.c  tc_demo.c  test_tc.c
src/test/: CMakeLists.txt  LG_brutal_malloc.c  LG_brutal_malloc.c.func-sort-c.html  LG_brutal_malloc.c.func.html  LG_brutal_malloc.c.gcov.html  LG_brutal_setup.c  LG_brutal_setup.c.func-sort-c.html  LG_brutal_setup.c.func.html  LG_heap.h  (+201 more)
(+2658 files in other folders)
